  trial use of it, show (+) above heads of nearby experts (before, you actually
  had to be out of tool slots to see other experts for an unlearned ground
  tool).  Part of jasonrohrer/OneLifeData7#624

--Boiling the frog:  eatBonus now starts at 2 (was 3) for Eve and decays to 1
  (was 2) with a half life of 4 generations.



Version 312   2020-February-28

--Mousing over an unlearned tool now shows you how many tool learning slots
  remain.  Fixes #522

--Reconnect now uses new RLOGIN command, which will only succeed if an existing
  life for you is still in progress (login fails otherwise).  Thus, you can
  never start a new life by accident when trying to reconnect to a life that
  has already expired.  Fixes #531

--Fixed potential server-side crash in atoi by using safer strtol instead.

--Fixed server-side crash when VOGM coordinates out of bounds.

--foodScaleFactor applied with ceil (instead of lrint) so that a food never
  rounds to 0 (like foodScaleFactor of 0.35 applied to popcorn).

--eatBonus and foodScaleFactor now decline over the generations from Eve.
  eatBonus starts at 4 and eventually reaches 3, with a half-life of 4
  generations.  foodScaleFactor starts at 1.0 and eventually reaches 1.0, with
  a half-life of 4 generations (i.e, foodScaleFactor currently doesn't change).

--Fixed HUGE bug in ancestor assignment for genetic scores of older siblings.
  When walking through the list of living players, to find older sibs that
  count as ancestors, only the first one encountered was added to the ancestor
  list.  break in code should have been continue.  This was most obvious with 
  twins, where only the first twin in the set would receive a pointer to a new
  baby.  Thanks Twisted.

--Healing steps were not counting as tool use.  Part of
  jasonrohrer/OneLifeData7#638

--Transformative steps (like sterilizing knife) no longer count as tool use of
  the original item (you transformed it into a different tool).  Part of